--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integração</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/index.css">    
+    <link rel="stylesheet" type="text/css" href="./assets/css/index.css">    
 </head>
 
 <body>
