--- a/centraltreinamentos/centralTreinamentos.html
+++ b/centraltreinamentos/centralTreinamentos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamentos</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/centralTreinamentos.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/centralTreinamentos.css">
 </head>
 
 <body>
