--- a/treinamentolgpd/TreinamentoLGPDFormularioSatisfacao.html
+++ b/treinamentolgpd/TreinamentoLGPDFormularioSatisfacao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario LGPD</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseTreinamentos.css">    
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">    
 </head>
 
 <body>
